<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView android:text="@string/lang_select_title" style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>

    <Button android:id="@+id/lang_cz" android:text="@string/lang_cz" 
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <Button android:id="@+id/lang_hu" android:text="@string/lang_hu" 
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <Button android:id="@+id/lang_sk" android:text="@string/lang_sk" 
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/override_locale_check" android:text="@string/override_locale" 
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
  
    <TextView android:text="@string/settings_title" style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/vol_buttons_check" android:text="@string/vol_buttons"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/dimlock_check" android:text="@string/dimlock"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/mute_check" android:text="@string/mute"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <TextView android:text="@string/prayer_content_settings_title" style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/verse_numbering_check" android:text="@string/verse_numbering"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/bible_references_check" android:text="@string/bible_references"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/liturgical_readings_check" android:text="@string/liturgical_readings"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <TextView android:text="@string/calendar_settings_title" style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/epiphany_sunday_check" android:text="@string/epiphany_sunday"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/ascension_sunday_check" android:text="@string/ascension_sunday"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/body_blood_sunday_check" android:text="@string/body_blood_sunday"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <CheckBox android:id="@+id/emphasize_local_calendar_check" android:text="@string/emphasize_local_calendar"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <Button android:id="@+id/alarms" android:text="@string/alarms"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <Button android:id="@+id/about" android:text="@string/about" 
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

    <Button android:id="@+id/btn_news" android:text="@string/btn_news" 
        android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

</LinearLayout>

</ScrollView>
